# Hexapod-robot-with-Ros

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/: README.md
src/4-4/: Curve.py  Curve_h.py  Swing.py  main.py  main_Text.py  shrinkage.py  stepcut.py  straight_h.py  test.py
src/SLDASM/: CMakeLists.txt  (+1 more)
src/第二代/huanyu_robot_start/: CMakeLists.txt  README.md  package.xml
src/第二代/huanyu_robot_start/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg  pid.cfg
src/第二代/huanyu_robot_start/config/: astra_rgbd_navigation.rviz
src/第二代/huanyu_robot_start/include/: Huanyu_robot.h
src/第二代/huanyu_robot_start/launch/: Huanyu_robot_start.launch  amcl_test.launch  astra_rgb_ir_depth.launch  astra_rgbd_mapping.launch  astra_rgbd_navigation.launch  astra_rgbd_rviz.launch  camera_image.launch  follower_line.launch  gmapping_slam.launch  hexpod.launch  karto_slam.launch  teb_navigation_slam.launch
src/第二代/huanyu_robot_start/map/: map.pgm
src/第二代/huanyu_robot_start/nano_py/: Uart.py  UsbR.py  main.py  nano_sub.py  test.py
src/第二代/huanyu_robot_start/new_py/: Uart.py  newsub.py
src/第二代/huanyu_robot_start/param/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/第二代/huanyu_robot_start/script/: follower_line.py  show_mark.py
src/第二代/huanyu_robot_start/scripts/: 111main.py  Curve.py  CurveLink.py  ForwardKinematics.py  Uart.py  UsbR.py  main.py  main_UsbR.py  stepcut.py  stepcutLink.py  stepdrive.py  straight.py  straightLink.py  subscriber.py  subscriber2.py
src/第二代/huanyu_robot_start/src/: Huanyu_robot.cpp
(+97 files in other folders)
